--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "eslint-config-airbnb-typescript": "^17.1.0",
+    "i18next": "^23.7.7",
     "react": "18.2.0",
+    "react-i18next": "^13.5.0",
     "react-native": "0.72.7",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0"
