--- a/package.json
+++ b/package.json
@@ -13,22 +13,20 @@
     "i18n:types": "i18next-resources-for-ts interface -i ./src/config/i18n/translations -o ./src/types/i18n/resources.d.ts"
   },
   "dependencies": {
+    "@jest/globals": "^29.7.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "react": "18.2.0",
-    "react-native": "0.72.7",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0",
-    "react-native-svg": "^14.1.0",
-    "@jest/globals": "^29.7.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "i18next": "^23.7.7",
-    "react-i18next": "^13.5.0"
+    "react": "18.2.0",
+    "react-i18next": "^13.5.0",
+    "react-native": "0.72.7",
+    "react-native-config": "^1.5.1",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
-    "@types/react-native-vector-icons": "^6.4.18",
-    "react-native-svg-transformer": "^1.1.0",
-    "react-native-vector-icons": "^10.0.2",
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
@@ -36,6 +34,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
@@ -52,6 +51,8 @@
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-native-bundle-visualizer": "^3.1.3",
+    "react-native-svg-transformer": "^1.1.0",
+    "react-native-vector-icons": "^10.0.2",
     "react-test-renderer": "18.2.0",
     "typescript": "5.1.6"
   },
