--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
     "eslint-config-airbnb-typescript": "^17.1.0",
+    "react-native-vector-icons": "^10.0.2",
     "i18next": "^23.7.7",
     "react": "18.2.0",
     "react-i18next": "^13.5.0",
