chore(Login): Set up authentication flow with persistence of user data after app the closes.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,14 +12,14 @@
       "@components/*": ["src/components/*"],
       "@constants/*": ["src/constants/*"],
       "@utils/*": ["src/utils/*"],
-      "@layout/*": ["src/layout/*"],
+      "@layouts/*": ["src/layouts/*"],
       "@navigation/*": ["src/navigation/*"],
       "@hooks/*": ["src/hooks/*"],
       "@api/*": ["src/api/*"],
       "@types/*": ["src/types/*"],
       "@context/*": ["src/context/*"],
       "@styles/*": ["src/styles/*"],
-      "@assets/*": ["src/assets/*"]
+      "@assets/*": ["src/assets/*"],
     }
   }
 }
