--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   },
   "dependencies": {
     "@jest/globals": "^29.7.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "react-native-vector-icons": "^10.0.2",
     "i18next": "^23.7.7",
     "react": "18.2.0",
     "react-i18next": "^13.5.0",
@@ -26,10 +26,10 @@
     "react-native-config": "^1.5.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
-    "react-native-svg": "^14.1.0"
+    "react-native-svg": "^14.1.0",
+    "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
-    "@types/react-native-vector-icons": "^6.4.18",
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
@@ -37,6 +37,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
