--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "react-native-vector-icons": "^10.0.2",
     "i18next": "^23.7.7",
     "react": "18.2.0",
     "react-i18next": "^13.5.0",
@@ -26,14 +25,15 @@
     "react-native-config": "^1.5.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
-    "react-native-svg": "^14.1.0"
+    "react-native-svg": "^14.1.0",
+    "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
+    "@testing-library/react-native": "^12.4.1",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.18",
@@ -56,6 +56,7 @@
     "react-native-svg-transformer": "^1.1.0",
     "react-native-vector-icons": "^10.0.2",
     "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.1.1",
     "typescript": "5.1.6"
   },
   "engines": {
