chore(tests) tests for the auth context and useAuth hook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "@context/*": ["src/context/*"],
       "@styles/*": ["src/styles/*"],
       "@assets/*": ["src/assets/*"],
+      "@mocks/*": ["src/mocks/*"],
     }
   }
 }
