--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-bundle-visualizer": "^3.1.3",
     "react-native-svg-transformer": "^1.1.0",
     "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.1.1",
     "typescript": "5.1.6"
   },
   "engines": {
