fix: Added Languages enum to be used across the app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@styles/*": ["src/styles/*"],
       "@assets/*": ["src/assets/*"],
       "@mocks/*": ["src/mocks/*"],
+      "@config/*": ["src/config/*"],
     }
   }
 }
