Fix @config problem

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,11 @@
       "@navigation/*": ["src/navigation/*"],
       "@hooks/*": ["src/hooks/*"],
       "@api/*": ["src/api/*"],
-      "@types/*": ["src/types/*"],
       "@context/*": ["src/context/*"],
       "@styles/*": ["src/styles/*"],
       "@assets/*": ["src/assets/*"],
       "@mocks/*": ["src/mocks/*"],
-      "@config/*": ["src/config/*"],
+      "@config/*": ["src/config/*"]
     }
   }
 }
