--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -118,6 +118,11 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    
+    // Necessary for the thermal printer package
+    implementation 'com.google.zxing:core:3.4.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
