--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@assets/*": ["src/assets/*"],
       "@mocks/*": ["src/mocks/*"],
       "@config/*": ["src/config/*"],
+      "@modules/*": ["src/modules/*"],
     }
   }
 }
