--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "i18next": "^23.7.7",
     "react": "18.2.0",
