--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.2",
+    "underscore": "^1.13.6",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/underscore": "^1.11.15",
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
