--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@testing-library/react-hooks": "^8.0.1",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
